fix(KIBON-3559): Sonar Empfehlungen, List.of anstatt ImmutableList.of, dazu ein paar unverwendete Impot gelöscht